--- a/project2/ReproducibleResearchProject2.rmd
+++ b/project2/ReproducibleResearchProject2.rmd
@@ -1,13 +1,13 @@
 ---
 title: "Analysis of the Adverse Health and Economic Impacts of US Storms"
-author: "Michael Galarnyk"
-date: "5/10/2017"
+author: "Laxmidhar ROuta"
+date: "08/31/2022"
 output: html_document
 ---
 
-Github repo for the Course: [Reproducible Research](https://github.com/mGalarnyk/datasciencecoursera/tree/master/5_Reproducible_Research)
+Github repo for the Course: [Reproducible Research](https://github.com/Laxmi530/filehash/tree/main/project2)
 </br>
-Github repo for Rest of Specialization: [Data Science Coursera](https://github.com/mGalarnyk/datasciencecoursera)
+Github repo for Rest of Specialization: [Data Science Coursera](https://github.com/Laxmi530/filehash)
 
 ## 1: Synopsis
 The goal of the assignment is to explore the NOAA Storm Database and explore the effects of severe weather events on both population and economy.The database covers the time period between 1950 and November 2011.
